error type added to swagger
